0.508 2023-12-01
  [Document Fix]
    * Fix the document of the new method in the Sys::Stat class. This method do not have arguments.
    
0.507 2023-12-01

  [New Features]
    * Add the following user/group methods to the Sys class.
    
      real_user_id

      effective_user_id

      real_group_id

      effective_group_id

      set_real_user_id

      set_effective_user_id

      set_real_group_id

      set_effective_group_id

      setpwent

      endpwent

      getpwent

      setgrent

      endgrent

      getgrent

      getgroups

      setgroups

      getpwuid

      getpwnam

      getgrgid

      getgrnam


0.506 2023-12-01
  [Incompatible Changes]
    * The definition of the localtime method in the Sys::Time is changed.
      [Before]
      static method localtime : Sys::Time::Tm ($time : long);
      [After]
      static method localtime : Sys::Time::Tm ($time_ref : long*);
      
    * The definition of the gmtime method in the Sys::Time is changed.
      [Before]
      static method gmtime : Sys::Time::Tm ($time : long);
      [After]
      static method gmtime : Sys::Time::Tm ($time_ref : long*);
    *  close-on-exec flag is set to the file stream opened by the open method in the Sys class.
  [Changes]
    * The system method in the Sys::Process class throwns an exception if the system system call fail.
    * The execv method in the Sys::Process class throwns an exception if the argument contains undef.
  [New Features]
    * Add the popen method to the Sys::IO class.
    * Add the _popen method to the Sys::IO class.
    * Add the popen method to the Sys class
    * Add the pclose method to the Sys::IO class.
    * Add the _pclose method to the Sys::IO class.
    * Add the pclose method to the Sys class.
    * Add the fork method to the Sys class.
    * Add the getpriority method to the Sys class.
    * Add the setpriority method to the Sys class.
    * Add the wait method to the Sys class.
    * Add the waitpid method to the Sys class.