@@ -253,7 +253,91 @@ class Sys::IO::Stat : pointer {
     return $ok;
   }
   
-  method cando : int ($mode : int, $effective : int) {
+  method r : int () {
+    
+    my $effective = 1;
+    my $ok = $self->cando(IO->S_IRUSR, $effective);
+    
+    return $ok;
+  }
+  
+  method w : int () {
+    
+    my $effective = 1;
+    my $ok = $self->cando(IO->S_IWUSR, $effective);
+    
+    return $ok;
+  }
+  
+  method x : int () {
+    
+    my $effective = 1;
+    my $ok = $self->cando(IO->S_IXUSR, $effective);
+    
+    return $ok;
+  }
+  
+  method R : int () {
+    
+    my $effective = 0;
+    my $ok = $self->cando(IO->S_IRUSR, $effective);
+    
+    return $ok;
+  }
+  
+  method W : int () {
+    
+    my $effective = 0;
+    my $ok = $self->cando(IO->S_IWUSR, $effective);
+    
+    return $ok;
+  }
+  
+  method X : int () {
+    
+    my $effective = 0;
+    my $ok = $self->cando(IO->S_IXUSR, $effective);
+    
+    return $ok;
+  }
+  
+  private static method _ingroup : int ($gid : int, $effective : int) {
+    
+    my $egid = Sys::User->getegid;
+    
+    my $supp_length = Sys::User->getgroups(0, undef);
+    
+    my $supp = new int[$supp_length];
+    
+    Sys::User->getgroups($supp_length, $supp);
+    
+    my $rgid = Sys::User->getgid;
+    
+    my $ingroup = 0;
+    my $cmp_gid = 0;
+    if ($effective) {
+      $cmp_gid = $egid;
+    }
+    else {
+      $cmp_gid = $rgid;
+    }
+    
+    if ($gid == $cmp_gid) {
+      $ingroup = 1;
+    }
+    else {
+      for my $sup (@$supp) {
+        if ($gid == $sup) {
+          $ingroup = 1;
+          last;
+        }
+      }
+    }
+    
+    return $ingroup;
+  }
+  
+  private method cando : int ($mode : int, $effective : int) {
     my $stmode = $self->st_mode;
     
     my $cando = 0;
@@ -302,89 +386,6 @@ class Sys::IO::Stat : pointer {
     return $cando;
   }
   
-  private static method _ingroup : int ($gid : int, $effective : int) {
-    
-    my $egid = Sys::User->getegid;
-    
-    my $supp_length = Sys::User->getgroups(0, undef);
-    
-    my $supp = new int[$supp_length];
-    
-    Sys::User->getgroups($supp_length, $supp);
-    
-    my $rgid = Sys::User->getgid;
-    
-    my $ingroup = 0;
-    my $cmp_gid = 0;
-    if ($effective) {
-      $cmp_gid = $egid;
-    }
-    else {
-      $cmp_gid = $rgid;
-    }
-    
-    if ($gid == $cmp_gid) {
-      $ingroup = 1;
-    }
-    else {
-      for my $sup (@$supp) {
-        if ($gid == $sup) {
-          $ingroup = 1;
-          last;
-        }
-      }
-    }
-    
-    return $ingroup;
-  }
-  
-  method r : int () {
-    
-    my $effective = 1;
-    my $ok = $self->cando(IO->S_IRUSR, $effective);
-    
-    return $ok;
-  }
-  
-  method w : int () {
-    
-    my $effective = 1;
-    my $ok = $self->cando(IO->S_IWUSR, $effective);
-    
-    return $ok;
-  }
-  
-  method x : int () {
-    
-    my $effective = 1;
-    my $ok = $self->cando(IO->S_IXUSR, $effective);
-    
-    return $ok;
-  }
-  
-  method R : int () {
-    
-    my $effective = 0;
-    my $ok = $self->cando(IO->S_IRUSR, $effective);
-    
-    return $ok;
-  }
-  
-  method W : int () {
-    
-    my $effective = 0;
-    my $ok = $self->cando(IO->S_IWUSR, $effective);
-    
-    return $ok;
-  }
-  
-  method X : int () {
-    
-    my $effective = 0;
-    my $ok = $self->cando(IO->S_IXUSR, $effective);
-    
-    return $ok;
-  }
 }
 
 =pod
